--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,16 +24,20 @@
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^10.0.6",
     "recharts": "^2.14.1",
     "simplebar": "^6.2.7",
     "simplebar-react": "^3.2.6",
+    "slick-carousel": "^1.8.1",
     "web3": "^4.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
